--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,39 +3,113 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".activity.MainActivity">
 
     <include android:id="@+id/tb_main"
         layout="@layout/toolbar" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Usuario"
-        android:id="@+id/bt_usuario"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/tb_main"
-        android:layout_centerHorizontal="true" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Apartamento"
-        android:id="@+id/bt_apartamento"
-        android:layout_below="@+id/bt_usuario"
-        android:layout_centerHorizontal="true" />
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
+        android:id="@+id/scrollView3" >
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Morador"
-        android:id="@+id/bt_morador"
-        android:layout_below="@+id/bt_apartamento"
-        android:layout_centerHorizontal="true" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Carro"
-        android:id="@+id/bt_carro"
-        android:layout_below="@+id/bt_morador"
-        android:layout_centerHorizontal="true" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Usuario"
+                android:id="@+id/bt_usuario"
+                android:layout_centerHorizontal="true" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Apartamento"
+                android:id="@+id/bt_apartamento"
+                android:layout_below="@+id/bt_usuario"
+                android:layout_centerHorizontal="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Morador"
+                android:id="@+id/bt_morador"
+                android:layout_below="@+id/bt_apartamento"
+                android:layout_centerHorizontal="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Carro"
+                android:id="@+id/bt_carro"
+                android:layout_below="@+id/bt_morador"
+                android:layout_centerHorizontal="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pessoa de Livre Acesso"
+                android:id="@+id/bt_pessoaLivreAcesso"
+                android:layout_below="@+id/bt_carro"
+                android:layout_centerHorizontal="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Autorização Vaga de Garagem"
+                android:id="@+id/bt_autorizacaoVagaGaragem"
+                android:layout_below="@+id/bt_pessoaLivreAcesso"
+                android:layout_centerHorizontal="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Correspondência"
+                android:id="@+id/bt_correspondencia"
+                android:layout_below="@+id/bt_autorizacaoVagaGaragem"
+                android:layout_centerHorizontal="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Comunicado"
+                android:id="@+id/bt_comunicado"
+                android:layout_below="@+id/bt_correspondencia"
+                android:layout_centerHorizontal="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Documento"
+                android:id="@+id/bt_documento"
+                android:layout_below="@+id/bt_comunicado"
+                android:layout_centerHorizontal="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Enquete"
+                android:id="@+id/bt_enquete"
+                android:layout_below="@+id/bt_documento"
+                android:layout_centerHorizontal="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reclamação Geral"
+                android:id="@+id/bt_reclamacao_geral"
+                android:layout_below="@+id/bt_enquete"
+                android:layout_centerHorizontal="true" />
+
+        </RelativeLayout>
+    </ScrollView>
+
 </RelativeLayout>
