--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -13,17 +13,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/scrollView"
-        android:layout_below="@+id/tb_cadastro_usuario">
+        android:layout_below="@+id/tb_cadastro_usuario"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
 
-        <RelativeLayout
+        <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin">
+            android:id="@+id/layout_linear_cadastro_usuario">
 
             <EditText
                 android:layout_width="match_parent"
@@ -110,31 +111,9 @@
                 android:text="@string/salvar"
                 android:layout_below="@+id/radioGroupId_cadastro_usuario"
                 android:theme="@style/botaoPadrao"
-                android:id="@+id/bt_cadastro_usuario_salvar1" />
+                android:id="@+id/bt_cadastro_usuario_salvar" />
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/edit_cadastro_usuario_numeroApartamento"
-                android:layout_below="@+id/radioGroupId_cadastro_usuario"
-                android:hint="Número do Apartamento" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/edit_cadastro_usuario_blocoApartamento"
-                android:layout_below="@+id/edit_cadastro_usuario_numeroApartamento"
-                android:hint="Bloco do Apartamento" />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/salvar"
-                android:layout_below="@+id/edit_cadastro_usuario_blocoApartamento"
-                android:theme="@style/botaoPadrao"
-                android:id="@+id/bt_cadastro_usuario_salvar2" />
-
-        </RelativeLayout>
+        </LinearLayout>
     </ScrollView>
 
 
