Atualizando inserções de cadastro
Adicionando listas de componentes.

Adicionando hora no cadastro de reserva.

--- a/app/src/main/res/layout/activity_cadastro_carro.xml
+++ b/app/src/main/res/layout/activity_cadastro_carro.xml
@@ -62,6 +62,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:layout_below="@+id/edit_cadastro_carro_nomeDono"
                 android:id="@+id/edit_cadastro_carro_cpf"
                 android:hint="CPF" />
