--- a/app/src/main/res/layout/activity_cadastro_morador.xml
+++ b/app/src/main/res/layout/activity_cadastro_morador.xml
@@ -49,6 +49,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:id="@+id/edit_cadastro_morador_cpf"
                 android:layout_below="@+id/edit_cadastro_morador_nome"
                 android:hint="CPF" />
