--- a/app/src/main/res/layout/activity_cadastro_pessoa_livre_acesso.xml
+++ b/app/src/main/res/layout/activity_cadastro_pessoa_livre_acesso.xml
@@ -48,6 +48,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 android:id="@+id/edit_cadastro_pessoa_livre_acesso_cpf"
                 android:layout_below="@+id/edit_cadastro_pessoa_livre_acesso_nome"
                 android:hint="CPF" />
