--- a/app/src/main/res/layout/activity_lista_usuario.xml
+++ b/app/src/main/res/layout/activity_lista_usuario.xml
@@ -18,4 +18,13 @@
         android:dividerHeight="1dp"
         android:layout_gravity="center_horizontal|top"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/tv_lista_usuario_inf"
+        android:layout_below="@+id/tb_lista_usuario"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp" />
+
 </RelativeLayout>
