--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="larguraLogo">200dp</dimen>
     <dimen name="alturaLogo">163dp</dimen>
     <dimen name="tamanhoLetraBotao">10sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
