--- a/app/src/main/res/layout/activity_cadastro_autorizacao_vaga_garagem.xml
+++ b/app/src/main/res/layout/activity_cadastro_autorizacao_vaga_garagem.xml
@@ -56,6 +56,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="date"
                 android:layout_below="@+id/edit_cadastro_autorizacao_vaga_garagem_marca"
                 android:id="@+id/edit_cadastro_autorizacao_vaga_garagem_data_limite_acesso"
                 android:hint="Data Limite de Acesso" />
