--- a/app/src/main/res/layout/activity_lista_morador.xml
+++ b/app/src/main/res/layout/activity_lista_morador.xml
@@ -28,4 +28,13 @@
         android:dividerHeight="1dp"
         android:layout_gravity="center_horizontal|top"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/tv_lista_morador_inf"
+        android:layout_below="@+id/tb_lista_morador"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp" />
+
 </RelativeLayout>
